[package]
name = "chip8-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8_core = { path = "../chip8_core" }
rp2040-hal = { version = "0.8.2", features = ["critical-section-impl"] }
rp2040-boot2 = "0.3.0"
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.0"
rand_core = "0.6.4"
